src/objects/CDT_Deletion_Log__c.object
<CustomObject>
    <description>This object will store the file details which was deleted from CDT object.</description>
    <fields>
        <fullName>Contolled_Document__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Controlled Document</label>
        <referenceTo>Controlled_Document__c</referenceTo>
        <relationshipLabel>CDT Deletion Logs</relationshipLabel>
        <relationshipName>CDT_Deletion_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DeletionDate__c</fullName>
        <description>Date the file is deleted.</description>
        <label>Deletion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <description>Name of the file which was deleted from CDT object</description>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Reason for file deletion</description>
        <label>Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <description>User who deleted the file</description>
        <label>User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CDT Deletion Log</label>
    <nameField>
        <label>CDT Deletion Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CDT Deletion Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>